sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: value ++ is not a member of Int
			if(plusPetit(i++, i)) {
                                      ^AlgBubbleSort1:7: error: value ++ is not a member of Int
				echange(i, i++);
                                            ^AlgBubbleSort1:11: error: not found: value ech
	}while(ech)
               ^