sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	do {
		var ech = false;
		for(i<-0 to getNombreValeurs()-1) {
			if(plusPetit(i++, i)) {
				echange(i, i++);
				ech = true;
			}
		}
	}while(ech)
}
